@@ -1,14 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD xmwce-0_p20120218.ebuild 884 RMD160 dacca305332c26f8b846114a011b75368d6cb8ca SHA1 fbf4b609ea19e3ecd3655e3caaf0570110c45cfe SHA256 dbd20712a37acbc0bc1112ebb58dd2773684e140ff891efcee2f67b5f6e98163
-EBUILD xmwce-0_p20120505.ebuild 989 RMD160 6ce131c31e4de63c95f1e8ef4fafba0652970ec2 SHA1 1295676f9c0d92df14b348068045ba4f465f753a SHA256 e0864e75061ab34affc9b4821cfc7d70c50d62ed823949d3bcd5d4bd44a0d847
-MISC ChangeLog 630 RMD160 15d7a2a93767cfe27f9ea3cf099b31b19439b92d SHA1 8442d694b68c566a189f9b63d01efe8deffa983d SHA256 b991a1e5cd9e7ecd9d08ced3fa18177eee0a0121800757aa38742e3042e8efce
+- -----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD xmwce-0_p20120510.ebuild 1047 RMD160 c458df7c39043c99934c4116b90afa8af90485ef SHA1 ec3a1fa08de130957ae83e8cc4c6a3fe31c0c3c7 SHA256 1842a1974b6478d6902f95bdc0449a85270703a8454129ca9ddb62a0cf1b2b98
+MISC ChangeLog 815 RMD160 7706e30fe2d79dd93c5e2e7f2adb5ea83875f109 SHA1 d42954468e9b5cbf7fdec9db147780dd0e826f52 SHA256 0e25b443f16c12694745943a22359152e70048156310125805d88915fb2b4644
 MISC metadata.xml 288 RMD160 134aa4b63cba644434222f506abb17afb41e563a SHA1 2a4cdfaaa72b4e2eb671d4bf37d69e57c86b817c SHA256 9adb2d8a42cadf27c7f859bf2e2e4e1d2d745b09a35b96e50c287f0cf32eeb7d
+- -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk+rXcQACgkQknrdDGLu8JAlXgD8Car54L9qbyTllOvBkOJcSxKz
+GnL2KfMrMhvhSrdYHjIA/j1veKFua6t5l4E+Xwhw4KxEX40QkThbJkVD4BKnkgPz
+=DlBZ
+- -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+lFTsACgkQknrdDGLu8JAD/gD/VtGuGnnaxdLVLLm33quA4NKE
-sq5SjOfvK1nW7PKz0vMBAJIQ61cd0GwbXz4iZL5JmQZZtZW/BE5/pb1FrGZINUEb
-=N7Yn
+iF4EAREIAAYFAk+rXdkACgkQknrdDGLu8JCp5gD/Y0KXshkBxoFRGkR3P452GK82
+atueNedW/XH499CbmuUA/1FhyzbLaioLwcvve2AGVuLk3GdFgQ6+t5KNMWJ7w4Aq
+=+ScZ
 -----END PGP SIGNATURE-----
