@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xmwce-0_p20120510 (10 May 2012)
+
+  10 May 2012; Michael Weber <xmw@gentoo.org> -xmwce-0_p20120218.ebuild,
+  -xmwce-0_p20120505.ebuild, +xmwce-0_p20120510.ebuild:
+  Version bump: mosh
+
 *xmwce-0_p20120505 (05 May 2012)
 
   05 May 2012; Michael Weber <xmw@gentoo.org> +xmwce-0_p20120505.ebuild:
